fixed review box alignment issue

--- a/landing_page.css
+++ b/landing_page.css
@@ -10,7 +10,18 @@ html, body, #main_demo {
     max-width: 1920px;
     margin: auto;
 }
-
+.header a {
+    color: #4e5058;
+}
+.demo a, .schedule_purple a, .head_sch a {
+    color: white;
+}
+.login {
+    color: black;
+}
+.learn_more a {
+    color: #000ff0;
+}
 .display_flex {
     display: flex;
 }
@@ -231,7 +242,6 @@ html, body, #main_demo {
 /* back_blue */
 #purple_main {
     width: 100%;
-    height: 2450px;
 }
 #slant_purple_top {
     width: 100%;
@@ -427,10 +437,12 @@ html, body, #main_demo {
     background-color: white;
     margin: auto;
 }
+
 /* Reviews */
+
 #reviews {
     width: 100%;
-    height: 350px;
+    height: 200px;
 }
 .review {
     max-width: 1050px;
@@ -442,6 +454,7 @@ html, body, #main_demo {
     position: absolute;
     top: 4600px;
     left: 23%;
+    box-shadow: 0.05rem 0.05rem rgba(0, 0, 0, 0.315);
 }
 .review_read {
     color: white;
@@ -505,9 +518,6 @@ html, body, #main_demo {
 .txt_val {
     background-color: #bc7e0f;
 }
-/* #rethink_pricing {
-    display: none;
-} */
 #automate_finops {
     position: absolute;
     top: 4600px;
@@ -520,7 +530,9 @@ html, body, #main_demo {
     left: 23%;
     display: none;
 }
+
 /* bottom head */
+
 .bottom_head {
     padding-top: 200px;
     width: 1400px;
@@ -547,7 +559,9 @@ html, body, #main_demo {
     margin-top: 7px;
     padding-left: 5px;
 }
+
 /* Services */
+
 .comp_services {
     width: 80%;
     margin: auto;
